--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^7.1.8",
+    "@sentry/react-native": "~7.2.0",
     "@supabase/supabase-js": "^2.95.3",
     "expo": "~54.0.33",
     "expo-clipboard": "^8.0.8",
