changes made for prod deploy

--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
       }
     },
     "android": {
+      "package": "com.savon40.flickpick",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#00838f"
@@ -35,9 +36,7 @@
     },
     "plugins": [
       "expo-router",
-      ["@sentry/react-native", {
-        "uploadSourceMapsToSentry": false
-      }]
+      "@sentry/react-native"
     ],
     "experiments": {
       "typedRoutes": true
