--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "FlickPick",
-    "slug": "FlickPick",
+    "name": "Flicks With Friends",
+    "slug": "flicks-with-friends",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "flickpick",
+    "scheme": "flickswithfriends",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -15,13 +15,13 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.savon40.flickpick",
+      "bundleIdentifier": "com.savon40.flickswithfriends",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
-      "package": "com.savon40.flickpick",
+      "package": "com.savon40.flickswithfriends",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#00838f"
