--- a/eas.json
+++ b/eas.json
@@ -16,7 +16,11 @@
         "SENTRY_DISABLE_AUTO_UPLOAD": "true"
       }
     },
-    "production": {}
+    "production": {
+      "env": {
+        "SENTRY_DISABLE_AUTO_UPLOAD": "true"
+      }
+    }
   },
   "submit": {
     "production": {}
