--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
     },
     "ios": {
       "supportsTablet": true,
+      "buildNumber": "2",
       "bundleIdentifier": "com.savon40.flickswithfriends",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
