--- a/app.json
+++ b/app.json
@@ -14,8 +14,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "buildNumber": "2",
+      "supportsTablet": false,
+      "buildNumber": "3",
       "bundleIdentifier": "com.savon40.flickswithfriends",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
